# serializer version: 1
# name: TestInsightActorsQueryRunner.test_insight_events_trends_query
  '''
  SELECT distinct_id AS distinct_id
  FROM
    (SELECT e.distinct_id AS distinct_id
     FROM events AS e
     WHERE and(equals(e.team_id, 99999), and(greaterOrEquals(e.timestamp, toDateTime64('2020-01-12 00:00:00.000000', 6, 'US/Pacific')), less(e.timestamp, toDateTime64('2020-01-13 00:00:00.000000', 6, 'US/Pacific')), equals(e.event, '$pageview')), less(e.timestamp, toDateTime64('today', 6, 'US/Pacific')))
     ORDER BY e.distinct_id ASC)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsightActorsQueryRunner.test_insight_persons_trends_groups_query
  '''
  SELECT name AS name
  FROM
    (SELECT groups.properties___name AS name
     FROM
       (SELECT actor_id AS actor_id,
               count() AS event_count,
               max(timestamp) AS last_seen
        FROM
          (SELECT e.`$group_0` AS actor_id,
                  toTimeZone(e.timestamp, 'US/Pacific') AS timestamp,
                  e.uuid AS uuid
           FROM events AS e
           WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('2020-01-09 00:00:00.000000', 6, 'US/Pacific')), less(timestamp, toDateTime64('2020-01-10 00:00:00.000000', 6, 'US/Pacific')), notEquals(e.`$group_0`, ''), equals(e.event, '$pageview')))
        GROUP BY actor_id) AS source
     INNER JOIN
       (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, 'US/Pacific')), 1) AS properties___name,
               groups.group_type_index AS index,
               groups.group_key AS key
        FROM groups
        WHERE equals(groups.team_id, 99999)
        GROUP BY groups.group_type_index,
                 groups.group_key) AS groups ON equals(groups.key, source.actor_id)
     ORDER BY groups.properties___name ASC SETTINGS optimize_aggregation_in_order=1,
                                                    join_algorithm='auto')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsightActorsQueryRunner.test_insight_persons_trends_query_with_argmaxV1
  '''
  SELECT name AS name,
         event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT persons.properties___name AS name,
            source.event_distinct_ids AS event_distinct_ids
     FROM
       (SELECT actor_id AS actor_id,
               count() AS event_count,
               groupUniqArray(distinct_id) AS event_distinct_ids,
               max(timestamp) AS last_seen
        FROM
          (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                  toTimeZone(e.timestamp, 'US/Pacific') AS timestamp,
                  e.uuid AS uuid,
                  e.distinct_id AS distinct_id
           FROM events AS e
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
           WHERE and(equals(e.team_id, 99999), ifNull(notEquals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.person_properties, 'email'), ''), 'null'), '^"|"$', ''), 'tom@posthog.com'), 1), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), less(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), equals(e.event, '$pageview')))
        GROUP BY actor_id) AS source
     INNER JOIN
       (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___name,
               person.id AS id
        FROM person
        WHERE and(equals(person.team_id, 99999), globalIn(id,
                                                            (SELECT source.actor_id AS actor_id
                                                             FROM
                                                               (SELECT actor_id AS actor_id, count() AS event_count, groupUniqArray(distinct_id) AS event_distinct_ids, max(timestamp) AS last_seen
                                                                FROM
                                                                  (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id, toTimeZone(e.timestamp, 'US/Pacific') AS timestamp, e.uuid AS uuid, e.distinct_id AS distinct_id
                                                                   FROM events AS e
                                                                   LEFT OUTER JOIN
                                                                     (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
                                                                      FROM person_distinct_id_overrides
                                                                      WHERE equals(person_distinct_id_overrides.team_id, 99999)
                                                                      GROUP BY person_distinct_id_overrides.distinct_id
                                                                      HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                                                                   WHERE and(equals(e.team_id, 99999), ifNull(notEquals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.person_properties, 'email'), ''), 'null'), '^"|"$', ''), 'tom@posthog.com'), 1), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), less(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), equals(e.event, '$pageview')))
                                                                GROUP BY actor_id) AS source)))
        GROUP BY person.id
        HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'US/Pacific'), person.version), plus(now64(6, 'US/Pacific'), toIntervalDay(1)))) SETTINGS optimize_aggregation_in_order=1) AS persons ON equals(persons.id, source.actor_id)
     ORDER BY persons.properties___name ASC SETTINGS optimize_aggregation_in_order=1,
                                                     join_algorithm='auto')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestInsightActorsQueryRunner.test_insight_persons_trends_query_with_argmaxV2
  '''
  SELECT name AS name,
         event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT persons.properties___name AS name,
            source.event_distinct_ids AS event_distinct_ids
     FROM
       (SELECT actor_id AS actor_id,
               count() AS event_count,
               groupUniqArray(distinct_id) AS event_distinct_ids,
               max(timestamp) AS last_seen
        FROM
          (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
                  toTimeZone(e.timestamp, 'US/Pacific') AS timestamp,
                  e.uuid AS uuid,
                  e.distinct_id AS distinct_id
           FROM events AS e
           LEFT OUTER JOIN
             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                     person_distinct_id_overrides.distinct_id AS distinct_id
              FROM person_distinct_id_overrides
              WHERE equals(person_distinct_id_overrides.team_id, 99999)
              GROUP BY person_distinct_id_overrides.distinct_id
              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
           WHERE and(equals(e.team_id, 99999), ifNull(notEquals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.person_properties, 'email'), ''), 'null'), '^"|"$', ''), 'tom@posthog.com'), 1), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), less(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), equals(e.event, '$pageview')))
        GROUP BY actor_id) AS source
     INNER JOIN
       (SELECT person.id AS id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name
        FROM person
        WHERE and(equals(person.team_id, 99999), globalIn(tuple(person.id, person.version),
                                                            (SELECT person.id AS id, max(person.version) AS version
                                                             FROM person
                                                             WHERE and(equals(person.team_id, 99999), globalIn(person.id,
                                                                                                                 (SELECT source.actor_id AS actor_id
                                                                                                                  FROM
                                                                                                                    (SELECT actor_id AS actor_id, count() AS event_count, groupUniqArray(distinct_id) AS event_distinct_ids, max(timestamp) AS last_seen
                                                                                                                     FROM
                                                                                                                       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id, toTimeZone(e.timestamp, 'US/Pacific') AS timestamp, e.uuid AS uuid, e.distinct_id AS distinct_id
                                                                                                                        FROM events AS e
                                                                                                                        LEFT OUTER JOIN
                                                                                                                          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
                                                                                                                           FROM person_distinct_id_overrides
                                                                                                                           WHERE equals(person_distinct_id_overrides.team_id, 99999)
                                                                                                                           GROUP BY person_distinct_id_overrides.distinct_id
                                                                                                                           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                                                                                                                        WHERE and(equals(e.team_id, 99999), ifNull(notEquals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.person_properties, 'email'), ''), 'null'), '^"|"$', ''), 'tom@posthog.com'), 1), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), less(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), equals(e.event, '$pageview')))
                                                                                                                     GROUP BY actor_id) AS source)))
                                                             GROUP BY person.id
                                                             HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'US/Pacific'), person.version), plus(now64(6, 'US/Pacific'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS persons ON equals(persons.id, source.actor_id)
     ORDER BY persons.properties___name ASC SETTINGS optimize_aggregation_in_order=1,
                                                     join_algorithm='auto')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
